resetted colors